Only run on pushes to main
Use workflow context instead of git

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,8 @@ name: Build and Push Image
 
 on:
   push:
+    branches:
+      - main
     paths:
       - "src/**"
       - ".github/workflows/**"
@@ -34,7 +36,6 @@ jobs:
         uses: docker/metadata-action@v5
         id: meta
         with:
-          context: git
           images: |
             ghcr.io/kflow-ai/kubernetes-reflector
           tags: |
