--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,12 @@ jobs:
       packages: write
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup QEMU
         uses: docker/setup-qemu-action@v3
@@ -37,7 +42,7 @@ jobs:
         id: meta
         with:
           images: |
-            ghcr.io/kflow-ai/kubernetes-reflector
+            ghcr.io/${{ github.repository }}
           tags: |
             type=ref,event=pr
             type=raw,value=${{ env.version }}
